Fixed styling to prevent overflow-x and weird behavior of displayed layers

--- a/react-ui/src/picker.css
+++ b/react-ui/src/picker.css
@@ -25,15 +25,17 @@ body {
   height: calc(
     100% - 47px
   );
+  max-width: 100%;
   overflow-y: auto; 
   border: 1px solid #ddd;
 } 
 
-.fa-info-circle {
+/* .fa-info-circle {
   float: left;
   color: #00a564;
   margin-right: 5px;
-}
+} */
+
 .miller-columns-container {
   padding: 10px;
 }
@@ -54,6 +56,7 @@ body {
   position: relative;
   display: block; /* Align items in a row */
 }
+
 .fas.fa-chevron-right.expanded {
   transform: rotate(90deg); /* Adjust as needed to point down */
 }
@@ -61,7 +64,13 @@ body {
 .fas.fa-chevron-right.expanded {
   transform: rotate(90deg); /* Adjust as needed to point down */
 }
-.far.fa-circle {
+
+.far.fa-circle, .fas.fa-check-square, .far.fa-square, .fa-check-circle, .fa-info-circle {
+  font-size: 12px; /* Ensure normal size for icons */
+  color: #00a564;
+  margin: 10px; /* Space between icons and text */
+}
+/* .far.fa-circle {
   float: right;
   color: #00a564;
 }
@@ -83,7 +92,7 @@ body {
 .fa-check-circle {
   float: right;
   color: #00a564;
-}
+} */
 
 .children-item:hover {
   background-color: #e9e9e9;
@@ -96,15 +105,21 @@ ul {
 }
 .children-item {
   background-color: transparent;
+  align-items: center;
   padding: 8px;
   margin-bottom: 1px;
   cursor: pointer;
   font-size: 16px;
-  display: block;
 }
-.children-item .fas.fa-chevron-right {
+/* .children-item .fas.fa-chevron-right {
   float: right;
+} */
+
+.main-content {
+  display: flex;
+  align-items: center;
 }
+
 .column-item .fas.fa-chevron-right {
   float: right;
 }
@@ -150,4 +165,19 @@ ul {
   border-color: black;
   border: solid;
   padding: 10px;
+}
+
+.icon-container {
+  flex: 0 0 auto;
+  padding: 0 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.text-container {
+  flex: 1;
+  margin-left: 10px;
+  white-space: normal;
+  word-break: normal;
 }
